--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "check": "npm run lint && npm run format -- --check"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
